# matUAVs

./: .gitignore  .vscode.code-workspace  ADAPTACOES_MULTIPLATAFORMA.md  BUILD.md  CMakeLists.txt  CODIGO_MODIFICADO.md  COMPILACAO.md  C_T140_R9.txt  C_T20_R6.txt  DIAGRAMA_FLUXO.md  D_T30_R6.txt  FLUXO_EXECUCAO.md  GUIA_PRATICO.md  INDEX.md  README.md  RESUMO_VISUAL.md  WORKFLOW_SUMMARY.md  input.txt  input_10LC.txt
.github/: copilot-instructions.md
etc/: MHCP.cpp  Output_old.cpp  Solution_alg3.cpp  Solutionlink_out_cl_in.new.txt  Solutionlink_out_cl_in_older.txt
output/C_T20_R6/19-05-2025-21-24-48/: gurobi_info.txt  predictions.txt  solutions.txt
output/C_T20_R6/19-05-2025-21-24-49/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-09-38-00/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-09-38-24/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-09-38-41/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-09-39-10/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-09-39-38/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-09-40-45/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-09-41-35/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-09-42-05/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-09-42-23/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-09-42-57/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-09-43-16/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-09-43-32/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-09-43-44/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-09-44-08/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-09-44-23/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-17-56-39/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-17-56-44/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-17-57-24/: gurobi_info.txt  predictions.txt
output/D_T30_R6/03-06-2025-18-01-11/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-18-01-54/: gurobi_info.txt  predictions.txt
output/D_T30_R6/03-06-2025-18-14-54/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-18-21-13/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/03-06-2025-18-23-13/: gurobi_info.txt  predictions.txt
output/D_T30_R6/03-06-2025-18-26-25/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/05-06-2025-17-53-08/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/05-06-2025-18-05-39/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/05-06-2025-18-06-23/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/09-06-2025-20-26-47/: gurobi_info.txt  predictions.txt
output/D_T30_R6/10-06-2025-09-55-46/: gurobi_info.txt  predictions.txt
output/D_T30_R6/10-06-2025-09-59-52/: gurobi_info.txt  predictions.txt
output/D_T30_R6/10-06-2025-10-02-46/: gurobi_info.txt  predictions.txt
output/D_T30_R6/10-06-2025-15-23-35/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-15-24-12/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-15-24-33/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-15-24-40/: gurobi_info.txt  predictions.txt
output/D_T30_R6/10-06-2025-15-36-46/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-15-44-13/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-15-46-38/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-16-08-37/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-21-54-07/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-21-56-56/: gurobi_info.txt  predictions.txt
output/D_T30_R6/10-06-2025-21-59-42/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-22-36-50/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-22-38-38/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-22-39-33/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-22-41-50/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-22-42-07/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-22-43-13/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-22-44-14/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-22-44-54/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-22-45-51/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-22-46-45/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-22-47-10/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-22-48-26/: gurobi_info.txt  predictions.txt  solutions.txt
output/D_T30_R6/10-06-2025-22-49-56/: gurobi_info.txt  predictions.txt  solutions.txt
src/: .vscode.code-workspace  Configuration.cpp  Configuration.h  Graph.cpp  Graph.h  Input.cpp  Input.h  MHCP.cpp  Node.cpp  Node.h  Output.cpp  Output.h  Rand.cpp  Rand.h  Robot.cpp  Robot.h  Solution.cpp  Solution.h  SolverContext.cpp  SolverContext.h  Utils.h  etc.cod
(+9799 files in other folders)
